tests/ui/mismatched_types/fn-variance-1.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/fn-variance-1.rs:11:15
   |
LL | fn takes_mut(x: &mut isize) { }
   | --------------------------- found signature defined here
...
LL |     apply(&3, takes_mut);
   |     -----     ^^^^^^^^^ expected due to this
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected function signature `fn(&{integer}) -> _`
              found function signature `fn(&mut isize) -> _`
note: required by a bound in `apply`
  --> $DIR/fn-variance-1.rs:5:37
   |
LL | fn apply<T, F>(t: T, f: F) where F: FnOnce(T) {
   |                                     ^^^^^^^^^ required by this bound in `apply`
help: consider wrapping the function in a closure
   |
LL |     apply(&3, |x| takes_mut(&mut *x));
   |               +++          +++++++++

error[E0631]: type mismatch in function arguments
  --> $DIR/fn-variance-1.rs:15:19
   |
LL | fn takes_imm(x: &isize) { }
   | ----------------------- found signature defined here
...
LL |     apply(&mut 3, takes_imm);
   |     -----         ^^^^^^^^^ expected due to this
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected function signature `fn(&mut {integer}) -> _`
              found function signature `fn(&isize) -> _`
note: required by a bound in `apply`
  --> $DIR/fn-variance-1.rs:5:37
   |
LL | fn apply<T, F>(t: T, f: F) where F: FnOnce(T) {
   |                                     ^^^^^^^^^ required by this bound in `apply`
help: consider wrapping the function in a closure
   |
LL |     apply(&mut 3, |x| takes_imm(&*x));
   |                   +++          +++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0631`.
